[package]
name = "cbfr"
version = "0.1.1"
edition = "2021"
author = "Cheries Mewengkang"
description = "A buffer that run on memory stack, focusing on performance and speed"
license = "MIT"
readme = "README.md"
repository = "https://github.com/purplebutt/rust-cbfr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
